--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "npm run build:live",
-    "build:live": "concurrently \"tsc -w\" \"nodemon ./bin/www.js --config nodemon.json\""
+    "build:live": "concurrently \"tsc -w\" \"nodemon ./bin/www.js --config nodemon.json\"",
+    "test": "jest"
   },
   "babel": {
     "presets": [
@@ -20,12 +21,26 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "jest": "^18.1.0",
     "mongoose": "^4.8.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "passport": "^0.3.2",
+    "serve-favicon": "~2.3.0",
+    "ts-jest": "^18.0.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
     "nodemon": "^1.11.0"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
