--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
-  - "7.4.0"
+  - "node"
 before_install:
+  - npm install typescript -g
   - npm install jest -g
 braches:
   only:
