Update travis.yml typescript

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 node_js:
   - "node"
 before_install:
-  - npm install typescript -g
-  - npm install jest -g
+  - npm install typescript jest -g
 braches:
   only:
     - master
