--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "serve-favicon": "~2.3.0",
-    "ts-jest": "^18.0.2"
+    "ts-jest": "^18.0.2",
+    "typescript": "^2.1.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
