--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^2.1.5"
   },
   "devDependencies": {
+    "@types/jest": "^18.1.1",
+    "@types/passport": "^0.3.2",
     "babel-preset-es2015": "^6.22.0",
     "nodemon": "^1.11.0"
   },
