--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
   },
   "dependencies": {
     "@types/express": "^4.0.35",
+    "@types/express-session": "0.0.32",
     "@types/mongoose": "^4.7.3",
     "@types/node": "^7.0.4",
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-session": "^1.15.0",
     "jade": "~1.11.0",
     "jest": "^18.1.0",
     "mongoose": "^4.8.0",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "ts-jest": "^18.0.2",
     "typescript": "^2.1.5"
