--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "ts-jest": "^18.0.2",
-    "typescript": "^2.1.5"
+    "typescript": "^2.1.5",
+    "request":"~2.79.0"
   },
   "devDependencies": {
     "@types/jest": "^18.1.1",
