--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "express-session": "^1.15.0",
     "jade": "~1.11.0",
     "jest": "^18.1.0",
+    "mailgun-js": "^0.8.1",
     "mongoose": "^4.8.0",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0",
     "ts-jest": "^18.0.2",
     "typescript": "^2.1.5"
